--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     	<h3>API Basejump: Timestamp microservice</h1>
     	<h4>User stories:</h4>
     	<blockquote>
-    		I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)
+    		Pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)
     	</blockquote>
     	<blockquote>
     		If it does, it returns both the Unix timestamp and the natural language form of that date.
@@ -56,7 +56,7 @@
 <pre>
 {
 unix: 1450117800,
-natural: "December 15, 2015"
+natural: "November 28th, 2017"
 }
 </pre>
     				</div>
